--- a/a01.css
+++ b/a01.css
@@ -12,5 +12,10 @@ body{
 
 div.header{
     background-color: #00ffff;
-    border-bottom: 2px solid #000000 ;
+    border-bottom: 4px solid #000000 ;
+}
+
+p.text{
+    font-size: small;
+    font-style: italic;
 }
