--- a/a01.css
+++ b/a01.css
@@ -15,7 +15,7 @@ div.header{
     border-bottom: 4px solid #000000 ;
 }
 
-p#text{
+p.text{
     font-size: medium;
     font-style: italic;
     color: #adff2f;
