--- a/a01.css
+++ b/a01.css
@@ -33,10 +33,10 @@ p.green{
 }
 
 p.red{
-    color: #ff0000;
+    color: #d62d2dee;
 }
 
-p#medium{
-    font-size: medium;
+p#small{
+    font-size: small;
     font-style: italic;
 }
