--- a/a01.css
+++ b/a01.css
@@ -13,6 +13,7 @@ body{
 div.header{
     background-color: #00ffff;
     border-bottom: 4px solid #000000 ;
+    width: 80%;
 }
 
 .search a{
@@ -43,4 +44,12 @@ div.header{
 p#small{
     font-size: small;
     font-style: italic;
+}
+
+th.realm{
+    color: gold;
+}
+
+th.inhabitant{
+    color: rosybrown;
 }
